--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,12 @@
     </nav>
 
     <div class="container">
+      <nav class="nav nav-pills flex-column flex-sm-row my-3">
+        <a class="flex-sm-fill text-sm-center nav-link" href="/fetch_user_profile">User Profile</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="/fetch_organizations_data">Organizations Info</a>
+        <a class="flex-sm-fill text-sm-center nav-link" href="/fetch_action_items">Action Items</a>
+      </nav>
+
       <%= yield %>
     </div>
 
